--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "ostream",
         "ostringstream",
         "struct",
+        "templatization",
         "YANETUT"
     ],
     "files.associations": {
