--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "iostream",
         "istream",
         "istringstream",
+        "MinMaxer",
         "ostream",
         "ostringstream",
         "struct",
